# video_downloader

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  HANDOVER.md  LICENSE  README.md  SECURITY.md  classydl.spec  classydl_entry.py  classydl_web.spec  classydl_web_entry.py  memory.md  pyproject.toml
.github/: commands.md  copilot-instructions.md  dependabot.yml
android/: build.gradle  settings.gradle
creator_tools/: README.md  build_kit.py  build_previews.py  generate_creator_kit.py
docs/: AFFILIATE_PROGRAM_IMPLEMENTATION.md  AFFILIATE_REGISTRATION_PREVIEW.md  AGENT_COORDINATION.md  ANDROID_APP_PLAN.md  ANDROID_BETA_DISTRIBUTION_AND_STRIPE_PLAN_2026-07-03.md  ANDROID_BETA_TESTER_INSTALL_GUIDE.md  ANDROID_PERMISSIONS_2026-07-07.md  ANDROID_SIGNING_AND_RELEASE.md  APK_SECURITY_REVIEW_CHECKLIST.md  CLOUDFLARE_DOWNLOADTHAT_APP_SETUP.md  DESKTOP_WEB_UI_PLAN.md  EXTERNAL_ENGAGEMENTS.md  FFMPEG_JNI_INVESTIGATION.md  GOOGLE_PLAY_OPERATIONS.md  GOOGLE_PLAY_OWNER_CHECKLIST.md  INFLUENCER_COPY_LIBRARY.md  INFLUENCER_CREATIVE_AUDIT.md  INFLUENCER_KIT_PROMPT.md  INFLUENCER_OUTREACH_KIT.md  INFLUENCER_VIDEO_SCRIPTS.md  IPHONE_APP_PLAN.md  MARKETING_LEGAL_GUARDRAILS.md  PLAY_CONSOLE_INTERNAL_TESTING_PREP.md  PLAY_STORE_READINESS.md  SIMPLE_APP_REDESIGN_2026-07-07.md  STRIPE_AFFILIATE_DECOMMISSION.md  STRIPE_CLOUDFLARE_SETUP_CHECKLIST.md  WORKPLAN.md  gpt_fable5_hero_planning_prompt.md  gpt_hero_animation_capability_matrix.md  gpt_product_cinema_v2_integration.md  gpt_product_cinema_v3_integration.md  influencer-design-directions.html  influencer-kit-preview.html  product_cinema_v3_homepage_integration_audit.md  product_cinema_v3_homepage_release_report.md
gpt_downloadthat_creator_kit/: gpt_BENCHMARK_DELIVERY.md
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
ios/: README.md
pro/: README.md
scripts/: android_version_from_tag.py  build_windows.ps1  check_public_claims.py  convert_to_mp4.py  export_stripe_test_evidence.py  google_play_finance.py  gradle_dependencies_to_cyclonedx.py  import_trust.ps1  redteam_poc.py  resign.ps1  selfsign_local.ps1  setup-google-play-finance-archive.ps1  sync-google-play-finance-archive.ps1  sync-google-play-finance-from-gcs.ps1  termux_run.sh  termux_setup.sh
security/: ASVS_5_MATRIX.md  ASVS_CORE_APP_ADDENDUM.md  ATTACK_SURFACE.md  BACKUP_RESTORE_TEST.md  BUSINESS_LOGIC_ABUSE_CASES.md  CERTIFICATION_LADDER.md  CRA_GAP_ANALYSIS.md  CURRENT_SECURITY_IMPLEMENTATION_STATUS.md  DATA_FLOW_AND_TRUST_BOUNDARIES.md  DRM_CIRCUMVENTION_AUDIT.md  EVIDENCE_INDEX.md  EXECUTIVE_SECURITY_SUMMARY.md  GOOGLE_PLAY_SECURITY_ARCHITECTURE.md  INCIDENT_RESPONSE_PLAN.md  ISO27001_READINESS_MATRIX.md  MASVS_MATRIX.md  NIST_SSDF_MATRIX.md  PCI_SCOPE_ASSESSMENT.md  PENETRATION_TEST_PLAN.md  PENETRATION_TEST_RESULTS.md  PRIVACY_AND_DATA_RETENTION_REVIEW.md  PRODUCTION_SECURITY_CHECKLIST.md  PUBLIC_CLAIMS_POLICY.md  RED_TEAM_REPORT_CORE_APP.md  RESIDUAL_RISK_ACCEPTANCE.md  RISK_REGISTER.md  SECURITY_ASSESSMENT_REPORT.md  SOC2_READINESS_MATRIX.md  (+2 more)
(+474 files in other folders)
