[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classy-video-downloader"
version = "0.1.0"
description = "A high-class but simple multi-strategy video downloader"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Codex" }]
dependencies = [
  "beautifulsoup4>=4.12.0",
  "requests>=2.32.0",
  "rich>=13.7.0",
  "textual>=0.79.0",
  "tomli>=2.0.1; python_version < '3.11'",
  "yt-dlp>=2024.12.13",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.10.0",
]
dev = [
  "pytest>=8.3.0",
]
# Creator-Kit-Generator (creator_tools/) — reine Dev-/Desktop-Werkzeuge, nicht Teil
# der App. Pure-Python-Wheels (Termux-Regel bleibt gewahrt); das Rendering nutzt
# zusätzlich ein lokales Chromium und ffmpeg, siehe creator_tools/README.md.
creator = [
  "segno>=1.6.0",
  "pillow>=10.0.0",
]

[project.scripts]
classydl = "video_downloader.cli:main"

[tool.setuptools]
packages = ["video_downloader", "video_downloader.web"]

[tool.setuptools.package-data]
"video_downloader.web" = ["static/**/*"]

[tool.pytest.ini_options]
pythonpath = ["."]
