[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classy-video-downloader"
version = "0.1.0"
description = "A high-class but simple multi-strategy video downloader"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Codex" }]
dependencies = [
  "beautifulsoup4>=4.12.0",
  "requests>=2.32.0",
  "rich>=13.7.0",
  "textual>=0.79.0",
  "tomli>=2.0.1; python_version < '3.11'",
  "yt-dlp>=2024.12.13",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.10.0",
]
dev = [
  "pytest>=8.3.0",
]
# Static analysis / SAST run in CI (security-scan.yml). Pure-Python, dev/CI
# only — never imported by the app or Android, so the Termux wheels rule is
# unaffected.
lint = [
  "ruff>=0.6.0",
  "bandit>=1.7.9",
]
[project.scripts]
classydl = "video_downloader.cli:main"

[tool.setuptools]
packages = ["video_downloader", "video_downloader.web"]

[tool.setuptools.package-data]
"video_downloader.web" = ["static/**/*"]

[tool.pytest.ini_options]
pythonpath = ["."]

# Ruff here is a fast "is the code actually broken" gate, not a style pass:
# E9 (syntax), F63/F7 (logic errors), F82 (undefined names / typos). Security
# scanning is bandit's job (below), so the noisy flake8-bandit `S` rules are
# deliberately not selected. Repo-wide style debt is out of scope.
[tool.ruff]
target-version = "py310"
extend-exclude = ["android", "pro", "build"]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.bandit]
# Skip asserts (B101) and the subprocess-use family (reviewed: yt-dlp/ffmpeg
# are invoked with fixed, non-shell argv - see strategies.py).
skips = ["B101", "B404", "B603", "B607"]
exclude_dirs = ["tests", "android", "pro", "build"]
